css/less/core/reset/base.less
// Base Styles
// ----------------------------------------------------------------------------/

* {
	.box-sizing;
	margin: 0;
	padding: 0;
	border: 0 none;
	font-size: inherit;
	font-family: inherit;
	line-height: inherit;
	color: inherit;
	vertical-align: baseline;
	outline: 0;
}

body,
html {
	height: 100%;
}

html {
	.font-size(@base: @root-font-size);
}

body {
	font-family: @base-font-family;
	font-weight: 400;
	color: @font-color;
	.line-height(@base-line-height);
	background-color: @background-color;
	overflow: auto;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section {
	display: block;
}

audio,
canvas,
progress,
video {
	display: inline-block;
}

summary {
	display: list-item;
}

audio,
canvas,
iframe,
img,
svg,
video {
	vertical-align: middle;
}

[hidden],
audio:not([controls]),
template {
	display: none;
	height: 0;
}

svg:not(:root) {
	overflow: hidden;
}

embed,
img,
object {
	max-width: 100%;
}

img {
	height: auto;
}

figure {
	.margin();
}

dd,
ol,
ul {
	.padding-left(@indent);
}

dl,
ol,
ul {
	.margin-bottom(@base-leading; @unit: rem);
	list-style-position: outside;
}

ol ol,
ol ul,
ul ol,
ul ul {
	margin-bottom: 0;
}

nav ol,
nav ul {
	padding-left: 0;
	list-style-type: none;
}

nav a {
	display: block;

	&:hover {
		text-decoration: none;
	}
}

hr {
	.box-sizing(content-box);
	display: block;
	height: 1px;
	.margin-bottom(@base-leading; @unit: rem);
	.border-top(@hr-border-width; @hr-border-style; @hr-border-color);
}

.selection();

